--- a/src/main/resources/templates/pages/admin_panel.html
+++ b/src/main/resources/templates/pages/admin_panel.html
@@ -1,11 +1,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="adminPage">
+<div th:fragment="adminPage" id="navigationPanelForAdmin">
     <nav>
         <div class="nav nav-tabs mx-n3" id="nav-tab" role="tablist">
             <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#table" role="tab"
                aria-controls="nav-home" aria-selected="true">User table</a>
-            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#new" role="tab"
+            <a class="nav-item nav-link" id="nav-profile-new" data-toggle="tab" href="#new" role="tab"
                aria-controls="nav-profile" aria-selected="false">New User</a>
         </div>
     </nav>
