--- a/src/main/resources/templates/blocks/srccdn.html
+++ b/src/main/resources/templates/blocks/srccdn.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <div th:fragment="cdn">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
@@ -11,8 +10,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-            crossorigin="anonymous"></script>
+
+
+    <!--    My js-->
+    <script th:src="@{../js/service.js}">Сервисные компоненты</script>
+    <script th:src="@{../js/tableBilder.js}">Отрисовка таблицы</script>
+    <script th:src="@{../js/methodsREST.js}">Методы</script>
+    <script th:src="@{../js/createNewUser.js}">Добавления нового пользователя</script>
+
 </div>
 </html>
