--- a/src/main/resources/templates/pages/allusers.html
+++ b/src/main/resources/templates/pages/allusers.html
@@ -1,7 +1,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="tableAllUsers">
-    <table class="table">
+    <table class="table" id="tableAllUsers">
         <thead>
         <tr>
             <th scope="col">ID</th>
@@ -14,38 +14,92 @@
             <th scope="col">Delete</th>
         </tr>
         </thead>
-        <tbody th:each="user : ${userList}">
-        <tr>
-            <td scope="row" th:text="${user.getId()}">ID</td>
-            <td th:text="${user.getName()}">name</td>
-            <td th:text="${user.getLastname()}">lastName</td>
-            <td th:text="${user.getAge()}">age</td>
-            <td th:text="${user.getEmail()}">Email</td>
-            <td>
-                <span th:each="role : ${user.getRoles()}" th:text="${role.getRole() + ' '}">Roles</span>
-            </td>
-            <td>
-                <button type="button" data-toggle="modal" class="btn btn-info"
-                        th:attr="data-target='#edit_' + ${user.getId()}">Edit
-                </button>
-            </td>
-            <td>
-                <button type="button" data-toggle="modal" class="btn btn-danger"
-                        th:attr="data-target='#delete_' + ${user.getId()}">Delete
-                </button>
-            </td>
-        </tr>
+        <tbody id="bodyTableAllUsers">
+
         </tbody>
-        <div th:each="userAct : ${userList}">
-            <div th:attr="id='edit_' + ${userAct.getId()}" th:insert="~{pages/editor :: modal_editor}"
-                 class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-                 aria-hidden="true">Modal editor
-            </div>
-        </div>
-        <div th:each="userAct : ${userList}">
-            <div th:attr="id='delete_' + ${userAct.getId()}" th:insert="~{pages/remover :: modal_remover}"
-                 class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-                 aria-hidden="true">Modal editor
+        <div class="modal fade" id="modalWindows" tabindex="-1" role="dialog"
+             aria-labelledby="exampleModalLabel"
+             aria-hidden="true">
+            <div>
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Title modal windows</h5>
+                            <button type="button" class="close" data-dismiss="modal"
+                                    aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+
+                        <div class="modal-body">
+                            <div class="container center col-6 font-weight-bold text-center" th:fragment="fildsUser">
+
+                                <div class="form-group">
+                                    <label for="id"
+                                           class="col-form-label">ID</label>
+                                    <input type="text" class="form-control" readonly
+                                           id="id" name="id" placeholder="ID"
+                                           value="id user">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="firstName" class="col-form-label">First
+                                        name</label>
+                                    <input type="text" class="form-control" required
+                                           id="name" name="name"
+                                           placeholder="First name user" value="First name">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="lastname" class="col-form-label">Last
+                                        name</label>
+                                    <input type="text" class="form-control" required
+                                           id="lastname" name="lastname"
+                                           placeholder="Last name"
+                                           value="Last name user">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="age"
+                                           class="col-form-label">Age</label>
+                                    <input type="number" class="form-control"
+                                           required
+                                           id="age" name="age" placeholder="Age"
+                                           value="Age user">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="email"
+                                           class="col-form-label">Email</label>
+                                    <input type="text" class="form-control" required
+                                           id="email" name="email"
+                                           placeholder="Email" value="Email user">
+                                </div>
+
+                                <div class="form-group" id="passFild">
+                                    <label for="password" class="col-form-label">Password</label>
+                                    <input type="password" class="form-control"
+                                           id="password" name="password"
+                                           placeholder="Password" viewFalse>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="roles">Role</label>
+                                    <select multiple="" size="0" name="rolNewUser" class="form-control" id="roles" viewFalse>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                </button>
+                                <button id="buttonEndOderDelete" type="submit" data-dismiss="modal"
+                                        class="btn btn-primary">Button
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </table>
