--- a/src/main/resources/templates/pages/user.html
+++ b/src/main/resources/templates/pages/user.html
@@ -20,7 +20,7 @@
             <td th:text="${user.getAge()}">age</td>
             <td th:text="${user.getEmail()}">Email</td>
             <td>
-                <span th:each="role : ${user.getRoles()}" th:text="${role.getRole() + ' '}">Roles</span>
+                <span th:each="role : ${user.getRoles()}" th:text="${role}">Roles</span>
             </td>
         </tr>
         </tbody>
